[package]
name = "cargo-devserver"
version = "0.2.1"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2021"
description = "recompile harness for rust web app development on cfg(unix)"
license = "Apache-2.0/MIT"

[dependencies]
serde = "1.0.190"
serde_json = "1.0.105"
structopt = "0.3.26"
nix = "0.26.2"
signal-hook = "0.3.17"
notify = "6.0.1"
log = "0.4.20"
env_logger = "0.10.0"
libc = "0.2.150"
cargo_metadata = "0.18.1"
