[package]
name = "cargo-devserver"
version = "0.2.2"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2021"
description = "recompile harness for rust web app development on cfg(unix)"
license = "Apache-2.0 OR MIT"

[dependencies]
serde = "1.0.197"
serde_json = "1.0.114"
signal-hook = "0.3.17"
notify = "6.1.1"
log = "0.4.21"
env_logger = "0.11.3"
libc = "0.2.153"
cargo_metadata = "0.18.1"
clap = { version = "4.5.4", features = ["derive", "env"] }

[dependencies.nix]
version = "0.27.1"
default-features = false
features = ["signal", "process", "socket", "net"]
